--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf dist && tsc",
-    "start": "node dist/backend/src/index.js",
-    "dev": "tsc-watch --onSuccess \"node -r dotenv/config dist/backend/src/index.js\" ",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"node -r dotenv/config dist/index.js\" ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
